Fxed some layout issues

--- a/main.css
+++ b/main.css
@@ -66,6 +66,11 @@ body {
         padding: 0 2vw;
         font-size: 5vw;
     }
+
+    .intro {
+        width: 100%;
+        font-size: 5vw;
+    }
     
     .menu-name {
         position: fixed;
@@ -82,7 +87,6 @@ body {
         align-items: center;
         justify-content: center;
         text-align: center;
-        font-size: 5vw;
         box-shadow: 0 0 0 0;
     }
 
